<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ac_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/all_activity_vertical_margin"
    android:paddingLeft="@dimen/all_activity_horizontal_margin"
    android:paddingRight="@dimen/all_activity_horizontal_margin"
    android:paddingTop="@dimen/all_activity_vertical_margin"
    tools:context="pt.ipleiria.estg.booksapp.About">

    <TextView
        android:text="@string/ac_about_tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvAcAboutDescription"/>

    <TextView
        android:text="@string/ac_about_tvIconLinkback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAcAboutDescription"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/all_activity_vertical_margin"
        android:id="@+id/tvAcAboutLinkback"/>

    <TextView
        android:text="@string/ac_about_tvCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/tvAcAboutCopyright"/>


</RelativeLayout>
