<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ac_books"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/all_activity_vertical_margin"
    android:paddingLeft="@dimen/all_activity_horizontal_margin"
    android:paddingRight="@dimen/all_activity_horizontal_margin"
    android:paddingTop="@dimen/all_activity_vertical_margin"
    tools:context="pt.ipleiria.estg.booksapp.Books"
    android:orientation="vertical">

    <TextView
        android:text="@string/ac_booksapp_tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_titulo_margem_vertical"
        android:textSize="@dimen/menu_titulo_tamanho_letra"
        android:textStyle="italic"
        android:id="@+id/tvAcBookAPPTitle"/>

    <Button
        android:text="@string/ac_booksapp_btnBookList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/menu_btn_margem_horizontal"
        android:layout_marginRight="@dimen/menu_btn_margem_horizontal"
        android:layout_marginBottom="@dimen/menu_btn_margem_vertical"
        android:textSize="@dimen/menu_btn_tamanho_letra"
        android:id="@+id/btnAcBookAPPBooksList"/>

    <Button
        android:text="@string/ac_booksapp_btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/menu_btn_margem_horizontal"
        android:layout_marginRight="@dimen/menu_btn_margem_horizontal"
        android:layout_marginBottom="@dimen/menu_btn_margem_vertical"
        android:textSize="@dimen/menu_btn_tamanho_letra"
        android:id="@+id/btnAcBookAPPGallery"/>

    <Button
        android:text="@string/ac_booksapp_btnNewBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/menu_btn_margem_horizontal"
        android:layout_marginRight="@dimen/menu_btn_margem_horizontal"
        android:textSize="@dimen/menu_btn_tamanho_letra"
        android:id="@+id/btnAcBookAPPNewBook"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/info"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/ibAcBookAPPAbout"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

</LinearLayout>
